--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,78 @@ services:
       - POSTGRESQL_PASSWORD=fb38099b58eb9ead913a584dcd298ff4d02af6d6be2a37bad50d0714f16af5d1
     volumes:
       - /Users/JoshLevin/Projects/postgres-data/:/bitnami
+  kafka1:
+    image: wurstmeister/kafka
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_LOG_DIRS: /kafka
+      KAFKA_BROKER_ID: 1
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.0.17
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ZOOKEEPER_CONNECT:  zoo1:2181,zoo2:2181,zoo3:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+  kafka2:
+    image: wurstmeister/kafka
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+    ports:
+      - "9093:9092"
+    environment:
+      KAFKA_LOG_DIRS: /kafka
+      KAFKA_BROKER_ID: 2
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.0.17
+      KAFKA_ADVERTISED_PORT: 9093
+      KAFKA_ZOOKEEPER_CONNECT:  zoo1:2181,zoo2:2181,zoo3:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+  kafka3:
+    image: wurstmeister/kafka
+    depends_on:
+      - zoo1
+      - zoo2
+      - zoo3
+    ports:
+      - "9094:9092"
+    environment:
+      KAFKA_LOG_DIRS: /kafka
+      KAFKA_BROKER_ID: 3
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.0.17
+      KAFKA_ADVERTISED_PORT: 9094
+      KAFKA_ZOOKEEPER_CONNECT:  zoo1:2181,zoo2:2181,zoo3:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+  zoo1:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+      - "2888"
+      - "3888"
+    environment:
+      MYID: 1
+      SERVERS: zoo1,zoo2,zoo3
+  zoo2:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2182:2181"
+      - "2888"
+      - "3888"
+    environment:
+      MYID: 2
+      SERVERS: zoo1,zoo2,zoo3
+  zoo3:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2183:2181"
+      - "2888"
+      - "3888"
+    environment:
+      MYID: 3
+      SERVERS: zoo1,zoo2,zoo3
