Working on loading spark to postgres. Issues with NULL ongoing.

--- a/config/stocks-config.ini
+++ b/config/stocks-config.ini
@@ -5,3 +5,22 @@ priceInterval = 60
 
 [development]
 priceInterval = 15
+priceSchema = {
+              }
+
+
+[priceSchema]
+symbol=StringType
+calculationPrice = DoubleType
+open = DoubleType
+close = DoubleType
+high = DoubleType
+low = DoubleType
+latestPrice = DoubleType
+latestSource = StringType
+latestUpdate = LongType
+latestVolumne = LongType
+change = DoubleType
+changePercent  = DoubleType
+peRatio  = DoubleType
+eventID  = StringType
